<resources>
    <string name="app_name">Expenses Manager</string>

    <string-array name="menu_titles">
        <item>Discover</item>
        <item>Categories</item>
        <item>Stats</item>
        <item>Profile</item>
    </string-array>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="preference_file">com.thetechshrine.expensesmanager.PREFERENCES_FILE</string>

    <string name="clothing">Clothing</string>
    <string name="drug">Drugs</string>
    <string name="expense">Expense</string>
    <string name="family">Family</string>
    <string name="food_drink"><![CDATA[Food & Drink]]></string>
    <string name="fuel">Fuel</string>
    <string name="gift">Gifts</string>
    <string name="groceries">Groceries</string>
    <string name="hospital">Hospital</string>
    <string name="internet">Internet</string>
    <string name="invoice">Invoice</string>
    <string name="laundry">Laundry</string>
    <string name="loan">Loan</string>
    <string name="merchandise">Merchandise</string>
    <string name="movie">VOD</string>
    <string name="pets">Pets</string>
    <string name="rent">Rent</string>
    <string name="restaurant">Restaurant</string>
    <string name="smartphone">Phone</string>
    <string name="tax">Tax</string>
    <string name="transport">Transport</string>
    <string name="backspace">Backspace</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="search">Search</string>
    <string name="no_data_found">No data found</string>
    <string name="save">Save</string>
    <string name="title">Title (optional)</string>
    <string name="date">Date (optional)</string>
    <string name="vendor_name">Vendor name (optional)</string>
    <string name="provide_amount">Please provide a valid amount</string>
    <string name="expense_saved">Your expense has been saved!</string>
    <string name="insurance">Medical insurances</string>
    <string name="name">Name</string>
    <string name="category_saved">Your category has been saved</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_delete_category">Are you sure you want to delete this category?</string>
    <string name="total_expenses">Total expenses</string>
    <string name="provide_start_date">You must provide at least the start date</string>
    <string name="modal_expense_on">On</string>
    <string name="modal_expense_you_spent">you spent</string>
    <string name="confirm_delete_expense">Are you sure you want to delete this expense?</string>
    <string name="new_label">New</string>
    <string name="all_categories">All categories</string>
    <string name="profile">Profile</string>
    <string name="currency_label">Currency</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="yen">Yen</string>
    <string name="naira">Naira</string>
    <string name="yuan">Yuan</string>
    <string name="cfa_central">Central african CFA</string>
    <string name="cfa_west">West african CFA</string>
    <string name="won">Won</string>
    <string name="splash_message">To get started, choose your currency among the currencies in the list below</string>

</resources>
