<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activities.SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                />

            <com.thetechshrine.expensemanager.components.views.ExtendedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:text="@string/app_name"
                app:font_weight="SemiBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:text="@string/splash_message" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/splash_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:layout_marginTop="24dp" />

            <com.thetechshrine.expensemanager.components.views.ExtendedButton
                android:id="@+id/splash_save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_primary_button"
                android:textColor="@color/colorWhite"
                android:text="@string/save"
                app:font_weight="SemiBold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>