<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".activities.CreateExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_button"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back" />

            <com.thetechshrine.expensemanager.components.views.ExtendedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/expense"
                app:font_weight="SemiBold" />

        </LinearLayout>

        <com.thetechshrine.expensemanager.components.views.ExtendedButton
            android:id="@+id/create_expense_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_primary_button"
            android:minHeight="36dp"
            android:textColor="@color/colorWhite"
            android:text="@string/save"
            android:textStyle="bold"
            app:font_weight="SemiBold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightDark" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_expense_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scrollbars="vertical"
                    android:scrollbarAlwaysDrawVerticalTrack="true" />

                <EditText
                    android:id="@+id/create_expense_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_edit_text"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/title"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/create_expense_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_edit_text"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/date"
                    android:clickable="true"
                    android:focusable="true" />

                <AutoCompleteTextView
                    android:id="@+id/create_expense_market_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_edit_text"
                    android:textSize="15sp"
                    android:hint="@string/vendor_name" />

                <com.thetechshrine.expensemanager.components.PriceEditText
                    android:id="@+id/create_expense_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>