<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".fragments.main.StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/stats_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:hint="@string/start_date"
                android:clickable="true"
                android:focusable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorEditText" />

            <TextView
                android:id="@+id/stats_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:hint="@string/end_date"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/stats_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_primary_button_circle"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightDark" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_overview_medium"
                    android:layout_margin="16dp"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">

                        <com.thetechshrine.expensemanager.components.views.ExtendedTextView
                            android:id="@+id/stats_currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:textSize="22sp"
                            app:font_weight="SemiBold" />

                        <com.thetechshrine.expensemanager.components.views.ExtendedTextView
                            android:id="@+id/stats_total_expenses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:textSize="28sp"
                            android:text=""
                            app:font_weight="SemiBold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorCyan"
                        android:textSize="13sp"
                        android:text="@string/total_expenses" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stats_categories_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stats_expenses_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="72dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="8dp"
                    android:layoutAnimation="@anim/recycler_view_slide_in_from_bottom" />

            </LinearLayout>

            <include
                layout="@layout/no_data_found" />

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>